<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/artSelectImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        android:contentDescription="@string/by_clicking_on_it_user_may_choose_an_image" />

    <EditText
        android:id="@+id/artNameDetailedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Art name"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textCapSentences"
        android:minHeight="20dp"
        app:layout_constraintBottom_toTopOf="@+id/authorNameDetailedText"
        app:layout_constraintEnd_toEndOf="@+id/artSelectImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/artSelectImage"
        app:layout_constraintTop_toBottomOf="@+id/artSelectImage" />

    <EditText
        android:id="@+id/authorNameDetailedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Autrhor`s name"
        android:ems="10"
        android:hint="@string/author_name"
        android:inputType="textCapSentences"
        android:minHeight="20dp"
        app:layout_constraintBottom_toTopOf="@+id/yearDetailedText"
        app:layout_constraintEnd_toEndOf="@+id/artNameDetailedText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/artNameDetailedText"
        app:layout_constraintTop_toBottomOf="@+id/artNameDetailedText" />

    <EditText
        android:id="@+id/yearDetailedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Year"
        android:ems="10"
        android:hint="@string/year"
        android:minHeight="20dp"

        app:layout_constraintBottom_toTopOf="@+id/SaveButton"
        app:layout_constraintEnd_toEndOf="@+id/authorNameDetailedText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/authorNameDetailedText"
        app:layout_constraintTop_toBottomOf="@+id/authorNameDetailedText" />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/yearDetailedText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/yearDetailedText"
        app:layout_constraintTop_toBottomOf="@+id/yearDetailedText" />
</androidx.constraintlayout.widget.ConstraintLayout>